# autogen-local

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  config.py  docker-compose.yml  local_bridge.py  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
agents/: __init__.py  adversarial.py  bft.py  constitutional.py  crew.py  decomposer.py  genetic.py  recursive_improve.py  self_healing.py  swarm.py
comms/: __init__.py  redis_bus.py  zmq_mesh.py
docs/: getting-started.md
memory/: __init__.py  context.py  persistent.py  state_manager.py
observability/: __init__.py  tracing.py
tests/: __init__.py  test_agents.py  test_config.py  test_workflows.py
tools/: __init__.py  dashboard.py  playground.py  sandbox.py
workflows/: __init__.py  cicd.py  code_review.py  orchestrator.py  research.py
