[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-local"
version = "0.1.0"
description = "Zero-cost multi-agent AI workflow suite running locally with Ollama"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Damian Wnorowski"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
distributed = [
    "redis>=4.0.0",
    "pyzmq>=25.0.0",
]
embeddings = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "autogen-local[dev,distributed,embeddings]",
]

[project.scripts]
autogen-local = "main:main"

[project.urls]
Homepage = "https://github.com/DamianWnorowski/autogen-local"
Repository = "https://github.com/DamianWnorowski/autogen-local.git"
Issues = "https://github.com/DamianWnorowski/autogen-local/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
